# calculus-corral

./: .gitignore  .ocamlformat  LICENSE.md  dune  dune-project
explicitly_typed/existential_types/exe/test/: dune  jbuild  test.ml  test_repl.mli  test_term.ml
explicitly_typed/existential_types/exe/test/cases/: boolean.lc.exp  church_boolean.lc  church_boolean.lc.exp  church_natural.lc  church_natural.lc.exp  function.lc.exp  natural.lc  natural.lc.exp
explicitly_typed/isorecursive_types/exe/test/: dune  jbuild  test.ml  test_term.ml
explicitly_typed/isorecursive_types/exe/test/cases/: church_boolean.lc  church_boolean.lc.exp  church_natural.lc  church_natural.lc.exp  church_pair.lc.exp  function.lc  function.lc.exp  record_pair.lc  record_pair.lc.exp  row_polymorphism.lc.exp  variant_boolean.lc  variant_boolean.lc.exp  variant_list.lc  variant_list.lc.exp  variant_natural.lc  variant_natural.lc.exp  variant_option.lc.exp
explicitly_typed/isorecursive_types_exp/exe/test/: dune  test.ml  test_term.ml
explicitly_typed/isorecursive_types_exp/exe/test/cases/: church_pair.lc.exp  function.lc  record_pair.lc.exp  variant_list.lc  variant_list.lc.exp  variant_natural.lc  variant_natural.lc.exp
explicitly_typed/records_and_variants/exe/test/: dune  jbuild  test.ml  test_term.ml
explicitly_typed/records_and_variants/exe/test/cases/: church_boolean.lc  church_boolean.lc.exp  church_natural.lc  church_natural.lc.exp  church_pair.lc  church_pair.lc.exp  function.lc  function.lc.exp  record_pair.lc  record_pair.lc.exp  row_polymorphism.lc  row_polymorphism.lc.exp  variant_boolean.lc  variant_boolean.lc.exp
explicitly_typed/type_operators_exp/exe/test/: dune  test.ml  test_term.ml
explicitly_typed/type_operators_exp/exe/test/cases/: church_boolean.lc.exp
implicitly_typed/algebraic_types_imp/exe/test/: dune  test.ml
implicitly_typed/algebraic_types_imp/exe/test/cases/: church_boolean.lc.exp  church_pair.lc  church_pair.lc.exp  record_pair.lc.exp
implicitly_typed/isorecursive_types_imp/: README.md
implicitly_typed/monomorphic_types/exe/test/: dune  jbuild  test.ml  test_repl.ml
implicitly_typed/monomorphic_types/exe/test/cases/: boolean.lc  boolean.lc.exp  church_boolean.lc  church_boolean.lc.exp  church_natural.lc  church_natural.lc.exp  church_pair.lc.exp  function.lc.exp  natural.lc  natural.lc.exp
implicitly_typed/type_annotations/: README.md
implicitly_typed/type_annotations/exe/test/: dune  jbuild  test.ml
implicitly_typed/type_annotations/exe/test/cases/: church_boolean.lc  church_boolean.lc.exp  church_natural.lc  church_natural.lc.exp  church_pair.lc  church_pair.lc.exp  function.lc.exp  hotcw.lc.exp  type_annotations.lc  type_annotations.lc.exp
utilities/exe/: disjoint_set_test.ml  dune  vector_test.ml
utilities/lib/: command.ml  disjoint_set.ml  disjoint_set.mli  dune  environment.ml  identifier.ml  identifier.mli  inference_variable_environment.ml  inference_variable_environment.mli  language.mli  miscellaneous.ml  miscellaneous.mli  stack.ml  stack.mli  test_repl.ml  type_environment.ml  vector.ml  vector.mli
utils/lib/: command.ml  command.mli  disjoint_set.ml  disjoint_set.mli  identifier.ml  identifier.mli  jbuild  language.ml  language.mli  location.ml  location.mli  miscellaneous.ml  miscellaneous.mli
utlities/lib/: command.mli  environment.ml  environment.mli  identifier.ml  identifier.mli  inference_variable_environment.ml  inference_variable_environment.mli  jbuild  language.ml  language.mli  location.ml  location.mli  miscellaneous.ml  miscellaneous.mli  option.ml  option.mli  stack.ml  stack.mli  test_repl.ml  test_repl.mli  (+2 more)
(+417 files in other folders)
