(executable
 (name test)
 (libraries oUnit isorecursive_types)
 (flags -w +A-4 -warn-error +A-4))

(rule
 (targets cases)
 (action
  (run cp -r
    %{workspace_root}/../../explicitly_typed/isorecursive_types/exe/test/cases/
    .)))

(alias
 (name runtest)
 (deps test.exe ../repl/repl.exe cases)
 (action
  (run %{exe:test.exe} -repl-exe %{exe:../repl/repl.exe} -case-dir ./cases/)))
