(executable
 (name test)
 (libraries oUnit type_operators_exp)
 (flags -w +A-4 -warn-error +A-4))

(rule
 (targets cases)
 (action
  (run cp -r
    %{workspace_root}/../../explicitly_typed/type_operators_exp/exe/test/cases/ .)))

(alias
 (name runtest)
 (deps test.exe ../repl/repl.exe cases)
 (action
  (run %{exe:test.exe} -repl-exe %{exe:../repl/repl.exe} -case-dir ./cases/)))
