(executable
 (name test)
 (libraries oUnit type_annotations)
 (flags -w +A-4 -warn-error +A-4))

(rule
 (targets cases)
 (action
  (run cp -r
    %{workspace_root}/../../implicitly_typed/type_annotations/exe/test/cases/
    .)))

(alias
 (name runtest)
 (deps test.exe ../repl/repl.exe cases)
 (action
  (run %{exe:test.exe} -repl-exe %{exe:../repl/repl.exe} -case-dir ./cases/)))
